# minllm

./: .gitignore  .pre-commit-config.yaml  README.md  check_flash_attn.py  main.py  pyproject.toml  test_flash_dropout.py  todo.md
data/openwebtext/: prepare.py
data/shakespeare/: prepare.py
data/shakespeare_char/: prepare.py
papers/: attention.md  full_model.md  moe.md  position.md
papers/data/: common_corpus.md  dolma.md  packing.md
papers/post_training/: preference_tuning.md
papers/posttraining/: instruction_tuning.md  latent_reasoning.md  preference_tuning.md
papers/pretraining/: attention.md  moe.md  position.md
posttraining/instruction_tuning/data/: dataset_builder.py
posttraining/instruction_tuning/scripts/: train_sft.py
posttraining/instruction_tuning/utils/: auth.py  checkpoint_utils.py  cpu_utils.py  hashing.py
pretraining/: README.md  pytest.ini
pretraining/common/base/: attention.py  core.py  ffn.py  llm.py  moe.py  outputs.py  transformer.py
pretraining/common/mixins/: architecture_mixins.py  fsdp_mixins.py  generation_mixins.py  (+1 more)
pretraining/configs/: base.py  core.py  loader.py  registry.py
pretraining/data/: builder.py  collator.py  dataloader.py  dataset.py  iterable_dataset.py  memmap_dataset.py
pretraining/gpt/: train.py
pretraining/scripts/: train_deepseek3.py  train_gpt2.py  train_llama3.py
pretraining/tests/: README.md  conftest.py  validate_jaxtyping.py
pretraining/trainer/: checkpoint_data.py  llm_trainer.py
pretraining/utils/: logger.py  torch_utils.py  weight_init.py
temp2/: config_discrepancies_analysis.md  deepseek3_model.py  deepseek3_train.py  gpt2_model.py  gpt2_train.py  llama31_model.py  rope.py
(+257 files in other folders)
